@@ -2,7 +2,6 @@ package com.example.memo.memo.service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -30,9 +29,13 @@ public class MemoService {
     private final AiMemoClient aiMemoClient;
 
     public List<MemoResponse> getAllMemos() {
-        return memoRepository.findAll().stream()
-            .map(MemoResponse::from)
-            .collect(Collectors.toList());
+        List<Memo> memos = memoRepository.findAll();
+        return memos.stream()
+            .map(memo -> {
+                List<Tag> tags = tagRepository.findAllById(memo.getTags());
+                return MemoResponse.from(memo, tags);
+            })
+            .toList();
     }
 
     public CreateMemoResponse createMemo(CreateMemoRequest createMemoRequest) {
@@ -87,29 +90,41 @@ public class MemoService {
     }
 
     public UpdateMemoResponse updateMemo(String memoId, UpdateMemoRequest updateMemoRequest) {
-        Memo memo = memoRepository.getById(memoId);
-        /* TODO 업데이트 기능 논의 필요
-        memo.update(updateMemoRequest);
+        Memo memo = memoRepository.findById(memoId)
+            .orElseThrow(() -> new MemoNotFoundException("메모를 찾지 못했습니다: " + memoId));
 
-        List<Tag> tags = updateMemoRequest.getTags().stream()
-                .map(tagId -> tagRepository.getById(tagId))
-                .collect(Collectors.toList());
+        AiCreateResponse aiCreateResponse = aiMemoClient.createMemo(updateMemoRequest.content());
 
-        memo.setTags(tags.stream().map(Tag::getId).collect(Collectors.toList()));
+        memo.update(updateMemoRequest.content(), aiCreateResponse.memoEmbeddings());
         Memo updatedMemo = memoRepository.save(memo);
-         */
-        return UpdateMemoResponse.from(memo);
+
+        List<Tag> tags = updatedMemo.getTags().stream()
+            .map(tagId -> tagRepository.findById(tagId)
+                .orElseThrow(() -> new MemoNotFoundException("태그를 찾지 못했습니다: " + tagId)))
+            .toList();
+
+        return UpdateMemoResponse.from(updatedMemo, tags);
     }
 
     public void deleteMemo(String memoId) {
-        Memo memo = memoRepository.getById(memoId);
+        Memo memo = memoRepository.findById(memoId)
+            .orElseThrow(() -> new MemoNotFoundException("메모를 찾지 못했습니다: " + memoId));
+
+        List<String> tagIds = memo.getTags();
+        for (String tagId : tagIds) {
+            Tag tag = tagRepository.findById(tagId)
+                .orElseThrow(() -> new MemoNotFoundException("태그를 찾지 못했습니다: " + tagId));
+            tag.deleteMemoId(memoId);
+            if (tag.getMemos().isEmpty()) {
+                tagRepository.delete(tag);
+            } else {
+                tagRepository.save(tag);
+            }
+        }
         memoRepository.delete(memo);
     }
 
     private List<Memo> searchMemoByIdList(List<String> ids) {
-        for (String id : ids) {
-            System.out.println(id);
-        }
         return ids.stream()
             .map(memoRepository::getById)
             .toList();
